<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_page_1"
        android:icon="@drawable/ic_star"
        android:title="@string/bottom_nav_first_page"
        android:visible="true" />

    <item
        android:id="@+id/action_page_2"
        android:icon="@drawable/ic_star"
        android:title="@string/bottom_nav_second_page"
        android:visible="true" />

    <item
        android:id="@+id/action_page_3"
        android:icon="@drawable/ic_star"
        android:title="@string/bottom_nav_third_page"
        android:visible="true" />

    <item
        android:id="@+id/action_page_4"
        android:icon="@drawable/ic_star"
        android:title="@string/bottom_nav_fourth_page"
        android:visible="false" />

    <item
        android:id="@+id/action_page_5"
        android:icon="@drawable/ic_star"
        android:title="@string/bottom_nav_fifth_page"
        android:visible="false" />
</menu>
